# Cam3dCpp

./: .gitignore  CMakeLists.txt  Cam3dCppClrWrapper.sln
Cam3dCppClrWrapper/: Cam3dCppClrWrapper.vcxproj  Cam3dCppClrWrapper.vcxproj.filters  ColorImageWrapper.cpp  ColorImageWrapper.h  DisparityMapWrapper.cpp  DisparityMapWrapper.h  GreyScaleImageWrapper.cpp  GreyScaleImageWrapper.h  MaskedImageWrapper.cpp  MaskedImageWrapper.h  MatchingAlgorithmWrapper.cpp  MatchingAlgorithmWrapper.h  ReadMe.txt  SgmMatchingAlgorithm.cpp  SgmMatchingAlgorithm.h  Wrapper.h  app.rc
Cam3dCppClrWrapper/Debug/: .NETFramework,Version=v4.5.2.AssemblyAttributes.asm
Cam3dCppClrWrapper/Debug/Cam3dCpp.CC42F9B9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cam3dCppClrWrapper.lastbuildstate  link.command.1.tlog  rc.read.1.tlog  (+4 more)
CamCommon/: Array2d.hpp  Array3d.hpp  BitWord.hpp  CMakeLists.txt  CamCommon.vcxproj  CamCommon.vcxproj.filters  Matrix.hpp  PreReqs.h  PreReqs.hpp  Vector2.h  Vector2.hpp
CamImageProcessing/: BorderFunction.hpp  CMakeLists.txt  CamImageProcessing.vcxproj  CamImageProcessing.vcxproj.filters  CensusCostComputer.hpp  ColorImage.hpp  GreyScaleImage.hpp  MaskedImage.hpp  MatchConfidenceComputer.hpp  SgmCostAggregator.hpp  SgmCostAggregatorForTests.hpp  SgmDisparityComputer.hpp  SgmDisparityComputerForTests.hpp  SgmPath.hpp  SgmPathsManager.hpp
CamTests/: BitWordTests.cpp  CMakeLists.txt  TestBitWord.cpp  TestCensus.cpp  TestSgmAggregator.cpp  TestSgmDisparityComputer.cpp  TestSgmPaths.cpp  TestSgmPathsManager.cpp  TestVector2.cpp  gtestmain.cpp  to_remove.cpp
(+1 files in other folders)
